--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
       POSTGRES_DB: todo 
     volumes: 
       - ./data/db:/var/lib/postgresql/data 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U administrator -d todo"]
+      interval: 5s
+      retries: 10
+      start_period: 60s
+      timeout: 20s
    app: 
     build: . 
     restart: always 
@@ -16,5 +22,7 @@ services:
        //administrator:verySecretPassword@database:5432/todo" 
     ports: 
       - "6400:6400" 
-    depends_on: 
-      - database
+    depends_on:
+      db:
+        condition: service_healthy
+        restart: true
